# OpenCL_ProjectTemplate_Cpp

./: CMakeLists.txt
include/: clUtils.hpp
kernels/: kernel.cl
src/: clUtils.cpp  main.cpp
